--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,11 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: https://scholar.google.com/citations?hl=en&user=UlZWgtsAAAAJ&view_op=list_works&sortby=pubdate
-        text: Publications
-        external: true
-      - href: test.qmd
-      - href: /ggsmc/
+      - href: about.qmd
 
 format:
   html:
